--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta charset="utf-8"/>
     <title>Kanye West Quotes</title>
@@ -8,11 +9,24 @@
     <script src="https://kit.fontawesome.com/5db32f5387.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand brand" href="#">? Random Quotes ?</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                  <a class="nav-item nav-link active" href="index.html">Kanye<span class="sr-only">(current)</span></a>
+              </div>
+          </div>
+          <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+      </nav>
     <div id="body">
         <div id="input" style="text-align:center">
             <form>
@@ -52,7 +66,7 @@
                         <!--</div>-->
                         <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
                     </div>
-                    <p class="github"><i class="fa fa-github" style="font-size:24px;color:red"></i>    Github page: <a href="https://github.com/RLin8103/Kanye-West-Quotes.git">https://github.com/RLin8103/Kanye-West-Quotes.git</a></p>
+                    <p class="github"><i class="fa fa-github" style="font-size:24px;color:red"></i>     Github page: <a href="https://github.com/RLin8103/Kanye-West-Quotes.git">https://github.com/RLin8103/Kanye-West-Quotes.git</a></p>
                 </div>
             </footer>
         </div>
